[#7] Ability to compile the project with Java 11 API
Closes #7